resources/tests/invalid_syntax/fn_call_validation.ct
//Error: (Function 'hello' expects 1 argument, not 0!|Type of argument does not match that of declaration!)
//2
fn hello(i64 a)->i32;

fn main()->i64
{
  hello(); //<- error
  hello(10u64); //<- error
}